# rust-repair-manager

./: Cargo.toml  README.md  rocket.toml
examples/: bson.rs  dates.rs  duration.rs  filtered_collection_results.rs  hash_password.rs  iter.rs  json_file.rs  map_err.rs  more_errors.rs  state.rs  ts.rs
src/: lib.rs  main.rs
src/apis/: customers.rs  login.rs  mod.rs  repairs.rs  users.rs
src/apis/request_guards/: user.rs
src/database/: db.rs
src/fairings/: cors.rs  mod.rs  request_timer.rs
src/models/: customer.rs  mod.rs  repair.rs  repaired_product.rs  user.rs
src/utils/: date_format.rs  logger.rs  mod.rs
tests/: customer_test.rs  login_test.rs  repair_tests.rs  users_test.rs
tests/common/: mod.rs
tests/fixtures/: README.md  customers.json  repairs.json  users.json
