[package]
name = "repair_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbkdf2 = "0.11.0"
mongodb = "2.2.2"
rocket =  { version = "0.5.0-rc.2", features = ["secrets", "json"] }
dotenv = "0.15.0"
bson = { version = "2.2.0", features = ["chrono-0_4"] }
futures = { version = "0.3", default-features = false }
serde = "1.0.136"
chrono = { version = "0.4.19", features = ["serde", "rustc-serialize"] }
rust-crypto = "^0.2"
log = "0.4"
fern="0.6.1"


[[example]]
name = "json_file"

[[example]]
name = "filtered_collection_results"

[[example]]
name = "bson"

[[example]]
name = "ts"

[[example]]
name = "map_err"

[[example]]
name = "iter"



[dev-dependencies]
serde_json = "1.0.66"